# cascade-app

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml  requirements.txt  submission.md  vercel.json
agent/: cascade_reasoning.py  geo_cascade.py  main.py  prompts.py  society.py  tools.py
api/: admin.py  cascade.py  deps.py  feed.py  graph.py  index.py  main.py  models.py  multimodal.py  search.py  sse.py
api/cron/: dispatch_workers.py
data/: companies.json  relationships.json
db/: __init__.py  _aws_creds.py  aurora.py  dynamo.py  schema.py
docs/: DEMO_VIDEO_SCRIPT.md
embed/: multimodal.py  ner.py  rerank.py  text.py
scripts/: backfill_company_sectors.py  backfill_embeddings.py  expand_seed_from_events.py  seed_companies.py  seed_demo_events.py  seed_relationships.py  setup_mongo.py  test_tools.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AgentTrace.tsx  BootSequence.tsx  Cascade.tsx  CascadeGraph.tsx  CascadeGraph3D.tsx  CompareView.tsx  CounterfactualOverlay.tsx  DemoTour.tsx  Feed.tsx  GeoCascadePanel.tsx  Globe.tsx  HeroGlobe.tsx  HopStepper.tsx  LiveStatusPill.tsx  NodeReasoning.tsx  RefreshButton.tsx  ReplayMenu.tsx  ResizableRail.tsx  SearchBar.tsx  TimeMachine.tsx  WatchMode.tsx  WorkerProgressBar.tsx
web/lib/: api.ts  cascade-layout.ts  (+3 more)
workers/: _common.py  aisstream.py  alpha_vantage.py  finnhub_ws.py  gdelt.py  marketaux.py  noaa.py  opensky.py  reddit.py  rss_news.py  sec_edgar.py  usgs.py  yfinance_ticks.py
(+1 files in other folders)
