[project]
name = "cascade"
version = "0.1.0"
description = "Real-time global market intelligence on Vercel + AWS Databases (Aurora PG + DynamoDB) + Gemini."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Cascade" }]
readme = "README.md"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "mangum>=0.17.0",
  "asyncpg>=0.29.0",
  "pgvector>=0.3.0",
  "aioboto3>=13.0.0",
  "boto3>=1.34.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "google-genai>=0.3.0",
  "voyageai>=0.3.0",
  "httpx>=0.27.0",
  "websockets>=13.0",
  "feedparser>=6.0.11",
  "beautifulsoup4>=4.12.0",
  "yfinance>=0.2.40",
  "praw>=7.7.1",
  "python-dotenv>=1.0.1",
  "orjson>=3.10.0",
  "tenacity>=9.0.0",
  "sse-starlette>=2.1.0",
  "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "agent*", "workers*", "embed*", "scripts*", "db*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
